--- a/src/style/partials/_layout.scss
+++ b/src/style/partials/_layout.scss
@@ -10,31 +10,6 @@
     width: calc(4 * 100% / 12);
     padding: 6px;
 }
-.col-4-2{
-    width: calc(4 * 100% / 12);
-    padding: 6px;
-    
-}
-.col-4-3{
-    width: calc(4 * 100% / 12);
-    padding: 6px;
-    
-}
-.col-4-4{
-    width: calc(4 * 100% / 12);
-    padding: 6px;
-    
-}
-.col-4-5{
-    width: calc(4 * 100% / 12);
-    padding: 6px;
-    
-}
-.col-4-6{
-    width: calc(4 * 100% / 12);
-    padding: 6px;
-    
-}
 .col-foot{
     width:calc(100% / 2);
     height: auto;
@@ -45,4 +20,10 @@
 }
 .section{
     padding: 32px;
+}
+.btn {
+    background-color: rgba(255, 69, 0, 0.7);
+    padding: 5px;
+    color:black;
+    border-radius: 20px;
 }
