--- a/src/style/partials/_layout.scss
+++ b/src/style/partials/_layout.scss
@@ -1,5 +1,5 @@
 .container{
-    width: 1024px;
+    max-width: 1024px;
     height: auto;
     margin: 0 auto;
     padding: 0 32px;
@@ -27,3 +27,4 @@
     color:black;
     border-radius: 20px;
 }
+
